# src/routes/api/request.routes.js
@@ -1,15 +1,21 @@
 import express from 'express';
 import RequestController from '../../controllers/request.controller';
 import Authentication from '../../middlewares/authentication';
-import { validateTripRequest } from '../../utils/validations';
 import controllers from '../../controllers';
 import {
     validateCommentPost,
     validateCommentUpdate,
     validateCommentDelete,
     validateCommentRetrieval, validateReqRetrieve } from '../../utils/comment.validations';
-
+import {
+    isTripRequestValid,
+    isTripRequestsSearchValid,
+} from '../../utils/validations';
+    
 const { createTripRequest, placesAndVisitTimes, getListOfMyRequests } = RequestController;
+const {
+    searchTripRequests,
+} = RequestController;
 const {
     isUserLoggedInAndVerified
 } = Authentication;
@@ -22,12 +28,13 @@ const {
     deleteComment
 } = controllers.CommentController;
 
-router.post('/', [isUserLoggedInAndVerified, validateTripRequest], createTripRequest);
+router.post('/', [isUserLoggedInAndVerified, isTripRequestValid], createTripRequest);
 router.get('/most-traveled-destinations', isUserLoggedInAndVerified, placesAndVisitTimes);
 router.post('/:requestId/comment', isUserLoggedInAndVerified, validateCommentPost, addNewComment);
 router.get('/comment', isUserLoggedInAndVerified, validateCommentRetrieval, getCommentSpecificReq);
 router.patch('/comment/:commentId', isUserLoggedInAndVerified, validateCommentUpdate, updateComments);
 router.delete('/comment/:commentId', isUserLoggedInAndVerified, validateCommentDelete, deleteComment);
 router.get('/', isUserLoggedInAndVerified, validateReqRetrieve, getListOfMyRequests);
+router.get('/search', [isUserLoggedInAndVerified, isTripRequestsSearchValid], searchTripRequests);
 
 export default router;
